--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quizdapp</string>
+    <string name="app_name">QuizShow</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -20,4 +20,5 @@
 
     <!-- test -->
     <string name="intent_create_wallet">Create Wallet</string>
+    <string name="msg_token_fmt">chpark</string>
 </resources>
